--- a/views/pages/mainpage.pug
+++ b/views/pages/mainpage.pug
@@ -8,6 +8,7 @@ html
                 io.socket.on('update', function onServerSentEvent (msg) {
                   document.getElementById("currentValue").innerHTML = msg.currentValue;
                   document.getElementById("turns").innerHTML = msg.turns;
+                  document.getElementById("players").innerHTML = msg.players;
                   if(msg.targetValue) {
                     document.getElementById("targetValue").innerHTML = msg.targetValue;
                     document.getElementById("distanceFromTarget").innerHTML=msg.targetValue-msg.currentValue
@@ -43,15 +44,18 @@ html
             }
             body {
                 background-color:black;
-                font-family: Monoton; font-size: 2em; color:blue; 
+                font-family: Monoton; font-size: 4em; color:blue; 
                 color:white; 
                 text-align: center;
             }
             .header {
-                font-size:2.5em;
+                width:100%;
+                margin-top:50px;
+                margin-bottom:50px;
+                font-size:1em;
                 color: white;
                 text-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
-                padding-top: 100px;
+                padding-top: 5x0px;
             }
             .blueneon {
               color: white;
@@ -59,16 +63,20 @@ html
             }
             .stats {width:100%; text-align:center;}
             .tab{
-                padding:10%;
-                height:200px;
+                padding-left:10%;
+                padding-right:10%;
+                display:block;
+                height:500px;
                 width:30%;
                 float: left;
+
             }
             .footer{
-                width:100%;
+              	width:100%;
+
                 display:block;
-                padding-top: 100px;
-                font-size:1em;
+                margin-top:50px;
+                font-size:.5em;
                 color: white;
                 text-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white, 0 0 40px green, 0 0 70px green, 0 0 80px green, 0 0 100px green, 0 0 150px green;
             }
@@ -76,7 +84,7 @@ html
                 font-size:2em !important;
             }
             .reduce {
-                font-size:.75em;
+                font-size:.65em;
             }
     body
     
@@ -92,7 +100,7 @@ html
                   span#turns=global.turns
                   |  turns taken)
             #targetTab.tab(style="display:"+(global.targetValue?"block":"none")+";")
-              .title.blueneon TARGET SCORE
+              .title.blueneon TARGET
               #targetValue.blueneon.enlarge=global.targetValue
               .reduce.blueneon
                 | (
@@ -104,8 +112,11 @@ html
                 span#turnsBeforeTarget=global.turnsBeforeTarget-global.turns 
                 |  more moves, you will be given a target to reach
         
-        .stats#won(style="padding-top:100px; padding-bottom:150px; display:"+(global.won?"block":"none")+";")
+        .stats#won(style="padding-top:100px; padding-bottom:50px; display:"+(global.won?"block":"none")+";")
           .enlarge.blueneon WINNER!
           .dummy.blueneon Congratulations; collect your cog
-        
-        .footer LEAVE THE DANCEFLOOR TO RESET THE GAME
+        br
+        .footer
+          |LEAVE THE DANCEFLOOR TO RESET THE GAME<BR/>
+          span#players=global.players
+          |  Players Active
